# opencv-test

./: .gitignore  CMakeLists.txt  config.h.in  main.cpp
lib/: utility.cpp
